fix: refactor to use signals for calendar value

--- a/projects/mona-ui/src/lib/date-inputs/calendar/calendar.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/calendar/calendar.component.html
@@ -7,10 +7,10 @@
     <div>
         @switch (calendarView()) {
             @case ('month') {
-                <button monaButton (click)="onViewChangeClick('year')">{{navigatedDate|date:'MMMM yyyy':timezone}}</button>
+                <button monaButton (click)="onViewChangeClick('year')">{{navigatedDate()|date:'MMMM yyyy':timezone}}</button>
             }
             @case ('year') {
-                <button monaButton (click)="onViewChangeClick('decade')">{{navigatedDate|date:'yyyy':timezone}}</button>
+                <button monaButton (click)="onViewChangeClick('decade')">{{navigatedDate()|date:'yyyy':timezone}}</button>
             }
             @case ('decade') {
                 <button monaButton>{{decadeYears[0]}} - {{decadeYears[decadeYears.length-1]}}</button>
@@ -42,7 +42,7 @@
                 @for (entry of monthlyViewDict | monaSlice:0:7; track entry.key) {
                     <td (click)="onDayClick(entry.key)"
                         [ngClass]="{'mona-calendar-other-month': entry.key|monaDateComparer:monthBounds.start:'<',
-                                    'mona-selected':entry.key|monaDateComparer:value:'==',
+                                    'mona-selected':entry.key|monaDateComparer:value():'==',
                                     'mona-disabled': disabled()||(entry.key|monaDateInclude:disabledDates())||(min() !== null && (entry.key|monaDateComparer:min():'<'))||(max() !== null && (entry.key|monaDateComparer:max():'>'))}">
                         <span>{{entry.value}}</span>
                     </td>
@@ -51,7 +51,7 @@
             <tr>
                 @for (entry of monthlyViewDict | monaSlice:7:14; track entry.key) {
                     <td (click)="onDayClick(entry.key)"
-                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value:'==',
+                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value():'==',
                                     'mona-disabled': disabled()||(entry.key|monaDateInclude:disabledDates())||(min() !== null && (entry.key|monaDateComparer:min():'<'))||(max() !== null && (entry.key|monaDateComparer:max():'>'))}">
                         <span>{{entry.value}}</span>
                     </td>
@@ -60,7 +60,7 @@
             <tr>
                 @for (entry of monthlyViewDict | monaSlice:14:21; track entry.key) {
                     <td (click)="onDayClick(entry.key)"
-                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value:'==',
+                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value():'==',
                                     'mona-disabled': disabled()||(entry.key|monaDateInclude:disabledDates())||(min() !== null && (entry.key|monaDateComparer:min():'<'))||(max() !== null && (entry.key|monaDateComparer:max():'>'))}">
                         <span>{{entry.value}}</span>
                     </td>
@@ -69,7 +69,7 @@
             <tr>
                 @for (entry of monthlyViewDict | monaSlice:21:28; track entry.key) {
                     <td (click)="onDayClick(entry.key)"
-                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value:'==',
+                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value():'==',
                                     'mona-disabled': disabled()||(entry.key|monaDateInclude:disabledDates())||(min() !== null && (entry.key|monaDateComparer:min():'<'))||(max() !== null && (entry.key|monaDateComparer:max():'>'))}">
                         <span>{{entry.value}}</span>
                     </td>
@@ -79,7 +79,7 @@
                 @for (entry of monthlyViewDict | monaSlice:28:35; track entry.key) {
                     <td (click)="onDayClick(entry.key)"
                         [ngClass]="{'mona-calendar-other-month':entry.key|monaDateComparer:monthBounds.end:'>',
-                                    'mona-selected':entry.key|monaDateComparer:value:'==',
+                                    'mona-selected':entry.key|monaDateComparer:value():'==',
                                     'mona-disabled': disabled()||(entry.key|monaDateInclude:disabledDates())||(min() !== null && (entry.key|monaDateComparer:min():'<'))||(max() !== null && (entry.key|monaDateComparer:max():'>'))}">
                         <span>{{entry.value}}</span>
                     </td>
@@ -89,7 +89,7 @@
                 @for (entry of monthlyViewDict | monaSlice:35:monthlyViewDict.length; track entry.key) {
                     <td (click)="onDayClick(entry.key)"
                         [ngClass]="{'mona-calendar-other-month': entry.key|monaDateComparer:monthBounds.end:'>',
-                                'mona-selected':entry.key|monaDateComparer:value:'==',
+                                'mona-selected':entry.key|monaDateComparer:value():'==',
                                 'mona-disabled': disabled()||(entry.key|monaDateInclude:disabledDates())||(min() !== null && (entry.key|monaDateComparer:min():'<'))||(max() !== null && (entry.key|monaDateComparer:max():'>'))}">
                         <span>{{entry.value}}</span>
                     </td>
