--- a/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
+++ b/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
@@ -1,107 +1,124 @@
 <div class="mona-filter-menu-item">
-    @if (type()==='string') {
+    @if (type() === 'string') {
         <mona-drop-down-list [data]="stringFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                             valueField="value" [ngModel]="selectedFilterMenuDataItemList[0]"
+                             valueField="value" [ngModel]="selectedFilterMenuDataItemList()[0]"
                              (ngModelChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
-        <mona-text-box [(ngModel)]="stringFilterValues[0]"
-                       [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-text-box>
+        <mona-text-box [ngModel]="stringFilterValues()[0]"
+                       (ngModelChange)="stringFilterValues.set([$event, stringFilterValues()[1]])"
+                       [disabled]="selectedFilterMenuDataItemList()[0]?.value|valuelessOperator"></mona-text-box>
     }
 
-    @if (type()==='number') {
+    @if (type() === 'number') {
         <mona-drop-down-list [data]="numericFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                             valueField="value" [ngModel]="selectedFilterMenuDataItemList[0]"
+                             valueField="value" [ngModel]="selectedFilterMenuDataItemList()[0]"
                              (ngModelChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
-        <mona-numeric-text-box [(ngModel)]="numberFilterValues[0]"
-                               [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-numeric-text-box>
+        <mona-numeric-text-box [ngModel]="numberFilterValues()[0]"
+                               (ngModelChange)="numberFilterValues.set([$event, numberFilterValues()[1]])"
+                               [disabled]="selectedFilterMenuDataItemList()[0]?.value|valuelessOperator"></mona-numeric-text-box>
     }
 
-    @if (type()==='date') {
+    @if (type() === 'date') {
         <mona-drop-down-list [data]="dateFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                             valueField="value" [ngModel]="selectedFilterMenuDataItemList[0]"
+                             valueField="value" [ngModel]="selectedFilterMenuDataItemList()[0]"
                              (ngModelChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
 
-        @if (dateOptions().type==='date') {
-            <mona-date-picker [(ngModel)]="dateFilterValues[0]" [format]="dateOptions().format"
-                              [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-date-picker>
+        @if (dateOptions().type === 'date') {
+            <mona-date-picker [ngModel]="dateFilterValues()[0]"
+                              (ngModelChange)="dateFilterValues.set([$event, dateFilterValues()[1]])"
+                              [format]="dateOptions().format"
+                              [disabled]="selectedFilterMenuDataItemList()[0]?.value|valuelessOperator"></mona-date-picker>
         }
 
-        @if (dateOptions().type==='datetime') {
-            <mona-date-time-picker [(ngModel)]="dateFilterValues[0]" [format]="dateOptions().format"
-                                   [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-date-time-picker>
+        @if (dateOptions().type === 'datetime') {
+            <mona-date-time-picker [ngModel]="dateFilterValues()[0]"
+                                   (ngModelChange)="dateFilterValues.set([$event, dateFilterValues()[1]])"
+                                   [format]="dateOptions().format"
+                                   [disabled]="selectedFilterMenuDataItemList()[0]?.value|valuelessOperator"></mona-date-time-picker>
         }
 
-        @if (dateOptions().type==='time') {
-            <mona-time-picker [(ngModel)]="dateFilterValues[0]" [format]="dateOptions().format"
-                              [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-time-picker>
+        @if (dateOptions().type === 'time') {
+            <mona-time-picker [ngModel]="dateFilterValues()[0]"
+                              (ngModelChange)="dateFilterValues.set([$event, dateFilterValues()[1]])"
+                              [format]="dateOptions().format"
+                              [disabled]="selectedFilterMenuDataItemList()[0]?.value|valuelessOperator"></mona-time-picker>
         }
     }
 
-    @if (type()==='boolean') {
+    @if (type() === 'boolean') {
         <mona-drop-down-list [data]="booleanFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                             valueField="value" [ngModel]="selectedFilterMenuDataItemList[0]"
+                             valueField="value" [ngModel]="selectedFilterMenuDataItemList()[0]"
                              (ngModelChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
     }
 
 </div>
-@if (firstFilterValid) {
+@if (firstFilterValid()) {
     <div class="mona-filter-menu-item">
-        <mona-button-group selection="single" [disabled]="!firstFilterValid">
+        <mona-button-group selection="single" [disabled]="!firstFilterValid()">
             @for (item of connectorDataItems; track item) {
-                <button monaButton [selected]="item.value === selectedConnectorItem?.value"
+                <button monaButton [selected]="item.value === selectedConnectorItem()?.value"
                         [toggleable]="false"
-                        (click)="onConnectorChange(item)">{{item.text}}</button>
+                        (click)="onConnectorChange(item)">{{ item.text }}
+                </button>
             }
         </mona-button-group>
     </div>
 }
-@if (!!selectedConnectorItem) {
+@if (!!selectedConnectorItem()) {
     <div class="mona-filter-menu-item">
-        @if (type()==='string') {
+        @if (type() === 'string') {
             <mona-drop-down-list [data]="stringFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList[1]"
+                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList()[1]"
                                  (ngModelChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
-            <mona-text-box [(ngModel)]="stringFilterValues[1]"
-                           [disabled]="selectedFilterMenuDataItemList[1]?.value|valuelessOperator"></mona-text-box>
+            <mona-text-box [ngModel]="stringFilterValues()[1]"
+                           (ngModelChange)="stringFilterValues.set([stringFilterValues()[0], $event])"
+                           [disabled]="selectedFilterMenuDataItemList()[1]?.value|valuelessOperator"></mona-text-box>
         }
 
-        @if (type()==='number') {
+        @if (type() === 'number') {
             <mona-drop-down-list [data]="numericFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList[1]"
+                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList()[1]"
                                  (ngModelChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
 
-            <mona-numeric-text-box [(ngModel)]="numberFilterValues[1]"
-                                   [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-numeric-text-box>
+            <mona-numeric-text-box [ngModel]="numberFilterValues()[1]"
+                                   (ngModelChange)="numberFilterValues.set([numberFilterValues()[0], $event])"
+                                   [disabled]="selectedFilterMenuDataItemList()[0]?.value|valuelessOperator"></mona-numeric-text-box>
         }
 
-        @if (type()==='date') {
+        @if (type() === 'date') {
             <mona-drop-down-list [data]="dateFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList[1]"
+                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList()[1]"
                                  (ngModelChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
 
-            @if (dateOptions().type==='date') {
-                <mona-date-picker [(ngModel)]="dateFilterValues[1]" [format]="dateOptions().format"
-                                  [disabled]="selectedFilterMenuDataItemList[1]?.value|valuelessOperator"></mona-date-picker>
+            @if (dateOptions().type === 'date') {
+                <mona-date-picker [ngModel]="dateFilterValues()[1]"
+                                  (ngModelChange)="dateFilterValues.set([dateFilterValues()[0], $event])"
+                                  [format]="dateOptions().format"
+                                  [disabled]="selectedFilterMenuDataItemList()[1]?.value|valuelessOperator"></mona-date-picker>
             }
 
-            @if (dateOptions().type==='datetime') {
-                <mona-date-time-picker [(ngModel)]="dateFilterValues[1]" [format]="dateOptions().format"
-                                       [disabled]="selectedFilterMenuDataItemList[1]?.value|valuelessOperator"></mona-date-time-picker>
+            @if (dateOptions().type === 'datetime') {
+                <mona-date-time-picker [ngModel]="dateFilterValues()[1]"
+                                       (ngModelChange)="dateFilterValues.set([dateFilterValues()[0], $event])"
+                                       [format]="dateOptions().format"
+                                       [disabled]="selectedFilterMenuDataItemList()[1]?.value|valuelessOperator"></mona-date-time-picker>
             }
 
-            @if (dateOptions().type==='time') {
-                <mona-time-picker [(ngModel)]="dateFilterValues[1]" [format]="dateOptions().format"
-                                  [disabled]="selectedFilterMenuDataItemList[1]?.value|valuelessOperator"></mona-time-picker>
+            @if (dateOptions().type === 'time') {
+                <mona-time-picker [ngModel]="dateFilterValues()[1]"
+                                  (ngModelChange)="dateFilterValues.set([dateFilterValues()[0], $event])"
+                                  [format]="dateOptions().format"
+                                  [disabled]="selectedFilterMenuDataItemList()[1]?.value|valuelessOperator"></mona-time-picker>
             }
         }
 
-        @if (type()==='boolean') {
+        @if (type() === 'boolean') {
             <mona-drop-down-list [data]="booleanFilterMenuDataItems|operatorFilter:operators()" textField="text"
-                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList[1]"
+                                 valueField="value" [ngModel]="selectedFilterMenuDataItemList()[1]"
                                  (ngModelChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
         }
     </div>
 }
 <div class="mona-filter-menu-item mona-filter-menu-actions">
-    <button monaButton (click)="onFilterApply()" [primary]="true" [disabled]="applyDisabled">Apply</button>
+    <button monaButton (click)="onFilterApply()" [primary]="true" [disabled]="applyDisabled()">Apply</button>
     <button monaButton (click)="onFilterClear()">Clear</button>
 </div>
