fix: several bug fixes and refactors

--- a/projects/mona-ui/src/lib/common/list/components/list/list.component.html
+++ b/projects/mona-ui/src/lib/common/list/components/list/list.component.html
@@ -49,7 +49,7 @@
         </li>
     } @else {
         <li class="mona-list-item" [attr.data-uid]="item.uid"
-            (click)="onListItemSelect(item)"
+            (click)="onListItemClick(item)"
             monaListItem [item]="item">
             <mona-list-item [item]="item" [template]="itemTemplate()??null"></mona-list-item>
         </li>
