feat: font size and font color tools

--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -2,5 +2,7 @@
     <mona-editor-basic-text-styles></mona-editor-basic-text-styles>
     <mona-editor-headings></mona-editor-headings>
     <mona-editor-text-alignments></mona-editor-text-alignments>
+    <mona-editor-font-size></mona-editor-font-size>
+    <mona-editor-font-color></mona-editor-font-color>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
