--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.html
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.html
@@ -9,92 +9,99 @@
             <mona-alpha-slider [color]="alphaInputColor()" [ngModel]="alpha()" (ngModelChange)="onAlphaChange($event)"></mona-alpha-slider>
         }
     </div>
-    <div class="mona-color-gradient-preview" [style.background-color]="selectedColor()"></div>
+    <div class="mona-color-gradient-preview-color" [style.background-color]="selectedColor()"></div>
+    @if (showButtons()) {
+        <div class="mona-color-gradient-current-color" (click)="onResetColorClick()"
+             [style.background-color]="lastSelectedColor()"></div>
+    }
 </div>
 <div class="mona-color-gradient-inputs">
-    <div class="mona-color-gradient-numeric-inputs">
-        <div class="mona-color-gradient-channel-inputs">
-            @if (colorMode()==='rgb') {
-                <div class="mona-color-gradient-rgb-inputs">
-                    <mona-numeric-text-box [ngModel]="rgb().r()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
-                                           [nullable]="false"
-                                           (ngModelChange)="onRgbChange($event, 'r')">
-                        <ng-template monaNumericTextBoxPrefixTemplate>
-                            <span class="mona-color-gradient-value-input-prefix">R</span>
-                        </ng-template>
-                    </mona-numeric-text-box>
-                    <mona-numeric-text-box [ngModel]="rgb().g()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
-                                           [nullable]="false"
-                                           (ngModelChange)="onRgbChange($event, 'g')">
-                        <ng-template monaNumericTextBoxPrefixTemplate>
-                            <span class="mona-color-gradient-value-input-prefix">G</span>
-                        </ng-template>
-                    </mona-numeric-text-box>
-                    <mona-numeric-text-box [ngModel]="rgb().b()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
-                                           [nullable]="false"
-                                           (ngModelChange)="onRgbChange($event, 'b')">
-                        <ng-template monaNumericTextBoxPrefixTemplate>
-                            <span class="mona-color-gradient-value-input-prefix">B</span>
-                        </ng-template>
-                    </mona-numeric-text-box>
-                    @if (opacity()) {
-                        <mona-numeric-text-box [ngModel]="alpha()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+    @if (showRgbInput()) {
+        <div class="mona-color-gradient-numeric-inputs">
+            <div class="mona-color-gradient-channel-inputs">
+                @if (colorMode()==='rgb') {
+                    <div class="mona-color-gradient-rgb-inputs">
+                        <mona-numeric-text-box [ngModel]="rgb().r()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
                                                [nullable]="false"
-                                               (ngModelChange)="onAlphaChange($event)">
+                                               (ngModelChange)="onRgbChange($event, 'r')">
                             <ng-template monaNumericTextBoxPrefixTemplate>
-                                <span class="mona-color-gradient-value-input-prefix">A</span>
+                                <span class="mona-color-gradient-value-input-prefix">R</span>
                             </ng-template>
                         </mona-numeric-text-box>
-                    }
-                </div>
-            } @else if (colorMode()==='hsv') {
-                <div class="mona-color-gradient-hsv-inputs">
-                    <mona-numeric-text-box [ngModel]="hsv().h()" [min]="0" [max]="360" [decimals]="0" [spinners]="false"
-                                           [nullable]="false"
-                                           (ngModelChange)="onHsvChange($event, 'h')">
-                        <ng-template monaNumericTextBoxPrefixTemplate>
-                            <span class="mona-color-gradient-value-input-prefix">H</span>
-                        </ng-template>
-                    </mona-numeric-text-box>
-                    <mona-numeric-text-box [ngModel]="hsv().s()" [min]="0" [max]="100" [decimals]="0" [spinners]="false"
-                                           [nullable]="false"
-                                           (ngModelChange)="onHsvChange($event, 's')">
-                        <ng-template monaNumericTextBoxPrefixTemplate>
-                            <span class="mona-color-gradient-value-input-prefix">S</span>
-                        </ng-template>
-                    </mona-numeric-text-box>
-                    <mona-numeric-text-box [ngModel]="hsv().v()" [min]="0" [max]="100" [decimals]="0" [spinners]="false"
-                                           [nullable]="false"
-                                           (ngModelChange)="onHsvChange($event, 'v')">
-                        <ng-template monaNumericTextBoxPrefixTemplate>
-                            <span class="mona-color-gradient-value-input-prefix">V</span>
-                        </ng-template>
-                    </mona-numeric-text-box>
-                    @if (opacity()) {
-                        <mona-numeric-text-box [ngModel]="alpha()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+                        <mona-numeric-text-box [ngModel]="rgb().g()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
                                                [nullable]="false"
-                                               (ngModelChange)="onAlphaChange($event)">
+                                               (ngModelChange)="onRgbChange($event, 'g')">
                             <ng-template monaNumericTextBoxPrefixTemplate>
-                                <span class="mona-color-gradient-value-input-prefix">A</span>
+                                <span class="mona-color-gradient-value-input-prefix">G</span>
                             </ng-template>
                         </mona-numeric-text-box>
-                    }
-                </div>
-            }
+                        <mona-numeric-text-box [ngModel]="rgb().b()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+                                               [nullable]="false"
+                                               (ngModelChange)="onRgbChange($event, 'b')">
+                            <ng-template monaNumericTextBoxPrefixTemplate>
+                                <span class="mona-color-gradient-value-input-prefix">B</span>
+                            </ng-template>
+                        </mona-numeric-text-box>
+                        @if (opacity()) {
+                            <mona-numeric-text-box [ngModel]="alpha()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+                                                   [nullable]="false"
+                                                   (ngModelChange)="onAlphaChange($event)">
+                                <ng-template monaNumericTextBoxPrefixTemplate>
+                                    <span class="mona-color-gradient-value-input-prefix">A</span>
+                                </ng-template>
+                            </mona-numeric-text-box>
+                        }
+                    </div>
+                } @else if (colorMode()==='hsv') {
+                    <div class="mona-color-gradient-hsv-inputs">
+                        <mona-numeric-text-box [ngModel]="hsv().h()" [min]="0" [max]="360" [decimals]="0" [spinners]="false"
+                                               [nullable]="false"
+                                               (ngModelChange)="onHsvChange($event, 'h')">
+                            <ng-template monaNumericTextBoxPrefixTemplate>
+                                <span class="mona-color-gradient-value-input-prefix">H</span>
+                            </ng-template>
+                        </mona-numeric-text-box>
+                        <mona-numeric-text-box [ngModel]="hsv().s()" [min]="0" [max]="100" [decimals]="0" [spinners]="false"
+                                               [nullable]="false"
+                                               (ngModelChange)="onHsvChange($event, 's')">
+                            <ng-template monaNumericTextBoxPrefixTemplate>
+                                <span class="mona-color-gradient-value-input-prefix">S</span>
+                            </ng-template>
+                        </mona-numeric-text-box>
+                        <mona-numeric-text-box [ngModel]="hsv().v()" [min]="0" [max]="100" [decimals]="0" [spinners]="false"
+                                               [nullable]="false"
+                                               (ngModelChange)="onHsvChange($event, 'v')">
+                            <ng-template monaNumericTextBoxPrefixTemplate>
+                                <span class="mona-color-gradient-value-input-prefix">V</span>
+                            </ng-template>
+                        </mona-numeric-text-box>
+                        @if (opacity()) {
+                            <mona-numeric-text-box [ngModel]="alpha()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+                                                   [nullable]="false"
+                                                   (ngModelChange)="onAlphaChange($event)">
+                                <ng-template monaNumericTextBoxPrefixTemplate>
+                                    <span class="mona-color-gradient-value-input-prefix">A</span>
+                                </ng-template>
+                            </mona-numeric-text-box>
+                        }
+                    </div>
+                }
+            </div>
+            <div class="mona-color-gradient-channel-switch">
+                <button monaButton [flat]="true" title="Switch color mode"
+                        (click)="onSwitchColorModeClick()">
+                    <fa-icon [icon]="switchIcon"></fa-icon>
+                </button>
+            </div>
         </div>
-        <div class="mona-color-gradient-channel-switch">
-            <button monaButton [flat]="true" title="Switch color mode"
-                    (click)="onSwitchColorModeClick()">
-                <fa-icon [icon]="switchIcon"></fa-icon>
-            </button>
-        </div>
-    </div>
-    <div class="mona-color-gradient-hex-input">
-        <mona-text-box [ngModel]="hex()" (ngModelChange)="onHexChange($event)" (inputBlur)="onHexInputBlur()" (inputFocus)="onHexInputFocus()">
-            <ng-template monaTextBoxPrefixTemplate>
-                <span class="mona-color-gradient-hex-input-prefix">HEX</span>
-            </ng-template>
-            <ng-template monaTextBoxSuffixTemplate>
+    }
+    @if (showHexInput()) {
+        <div class="mona-color-gradient-hex-input">
+            <mona-text-box [ngModel]="hex()" (ngModelChange)="onHexChange($event)" (inputBlur)="onHexInputBlur()" (inputFocus)="onHexInputFocus()">
+                <ng-template monaTextBoxPrefixTemplate>
+                    <span class="mona-color-gradient-hex-input-prefix">HEX</span>
+                </ng-template>
+                <ng-template monaTextBoxSuffixTemplate>
                 <span class="mona-color-gradient-hex-input-suffix">
                     <button monaButton [flat]="true" title="Copy color" #copyButton>
                         <fa-icon [icon]="copyIcon"></fa-icon>
@@ -104,7 +111,14 @@
                         <mona-menu-item text="Copy as RGB" (menuClick)="onCopyColorSelect('rgb')"></mona-menu-item>
                     </mona-contextmenu>
                 </span>
-            </ng-template>
-        </mona-text-box>
-    </div>
+                </ng-template>
+            </mona-text-box>
+        </div>
+    }
+    @if (showButtons()) {
+        <div class="mona-color-gradient-buttons">
+            <button monaButton [primary]="true" (click)="onApply()">Apply</button>
+            <button monaButton (click)="onCancel()">Cancel</button>
+        </div>
+    }
 </div>
