feat: color picker value template

--- a/projects/mona-ui/src/lib/editor/components/editor-font-color/editor-font-color.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-font-color/editor-font-color.component.html
@@ -1,1 +1,2 @@
-<mona-color-picker view="palette" [ngModel]="selectedColor()" (ngModelChange)="onColorChange($event)"></mona-color-picker>
+<mona-color-picker view="gradient" [ngModel]="selectedColor()"
+                   (ngModelChange)="onColorChange($event)"></mona-color-picker>
