feat: editor text highlighting

--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -4,5 +4,6 @@
     <mona-editor-text-alignments></mona-editor-text-alignments>
     <mona-editor-font-size></mona-editor-font-size>
     <mona-editor-font-color></mona-editor-font-color>
+    <mona-editor-font-highlight></mona-editor-font-highlight>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
