--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -5,5 +5,6 @@
     <mona-editor-font-size></mona-editor-font-size>
     <mona-editor-font-color></mona-editor-font-color>
     <mona-editor-font-highlight></mona-editor-font-highlight>
+    <mona-editor-blockquote></mona-editor-blockquote>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
