feat: editor ordered and unordered lists

--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -7,5 +7,6 @@
     <mona-editor-font-highlight></mona-editor-font-highlight>
     <mona-editor-blockquote></mona-editor-blockquote>
     <mona-editor-link></mona-editor-link>
+    <mona-editor-list></mona-editor-list>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
