feat: editor undo/redo

--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -9,5 +9,6 @@
     <mona-editor-link></mona-editor-link>
     <mona-editor-list></mona-editor-list>
     <mona-editor-indent></mona-editor-indent>
+    <mona-editor-history></mona-editor-history>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
