--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -5,7 +5,7 @@
                 <col style="width: 34px;">
             }
             @for (column of columns(); track $index) {
-                <col [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth">
+                <col [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
             }
         </colgroup>
         <tbody>
