feat: editor font family

--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -3,6 +3,7 @@
     <mona-editor-headings></mona-editor-headings>
     <mona-editor-text-alignments></mona-editor-text-alignments>
     <mona-editor-font-size></mona-editor-font-size>
+    <mona-editor-font-family></mona-editor-font-family>
     <mona-editor-font-color></mona-editor-font-color>
     <mona-editor-font-highlight></mona-editor-font-highlight>
     <mona-editor-blockquote></mona-editor-blockquote>
