--- a/projects/mona-ui/src/lib/editor/components/editor-font-family/editor-font-family.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-font-family/editor-font-family.component.html
@@ -1,2 +1,3 @@
 <mona-drop-down-list [data]="editorService.fonts()" [ngModel]="selectedFontFamily()"
-                     (ngModelChange)="onFontFamilyChange($event)" style="width: 180px;"></mona-drop-down-list>
+                     (ngModelChange)="onFontFamilyChange($event)" title="Select font family"
+                     style="width: 180px;"></mona-drop-down-list>
