--- a/projects/mona-ui/src/lib/editor/components/editor-history/editor-history.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-history/editor-history.component.html
@@ -1,8 +1,8 @@
 <mona-button-group selection="single">
-    <button monaButton [disabled]="undoDisabled()" (click)="onUndoClick()">
+    <button monaButton [disabled]="undoDisabled()" (click)="onUndoClick()" title="Undo">
         <fa-icon [icon]="undoIcon"></fa-icon>
     </button>
-    <button monaButton [disabled]="redoDisabled()" (click)="onRedoClick()">
+    <button monaButton [disabled]="redoDisabled()" (click)="onRedoClick()" title="Redo">
         <fa-icon [icon]="redoIcon"></fa-icon>
     </button>
 </mona-button-group>
