--- a/projects/mona-ui/src/lib/editor/components/editor-blockquote/editor-blockquote.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-blockquote/editor-blockquote.component.html
@@ -1,3 +1,3 @@
-<button monaButton [selected]="blockquoteSelected()" (click)="onBlockquoteToggle()">
+<button monaButton [selected]="blockquoteSelected()" (click)="onBlockquoteToggle()" title="Quotation">
     <fa-icon [icon]="blockquoteIcon"></fa-icon>
 </button>
