--- a/projects/mona-ui/src/lib/editor/components/editor-font-size/editor-font-size.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-font-size/editor-font-size.component.html
@@ -1,4 +1,5 @@
 <mona-drop-down-list [data]="fontSizes" textField="text" valueField="valueField"
                      placeholder="Font Size"
                      [ngModel]="selectedFontSize()" (ngModelChange)="onFontSizeChange($event)"
+                     title="Select font size"
                      style="width: 120px;"></mona-drop-down-list>
