--- a/projects/mona-ui/src/lib/editor/components/editor-list/editor-list.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-list/editor-list.component.html
@@ -1,8 +1,8 @@
 <mona-button-group selection="single">
-    <button monaButton [selected]="unorderedListSelected()" (click)="onUnorderedListToggle()">
+    <button monaButton [selected]="unorderedListSelected()" (click)="onUnorderedListToggle()" title="Insert unordered list">
         <fa-icon [icon]="unorderedListIcon"></fa-icon>
     </button>
-    <button monaButton [selected]="orderedListSelected()" (click)="onOrderedListToggle()">
+    <button monaButton [selected]="orderedListSelected()" (click)="onOrderedListToggle()" title="Insert ordered list">
         <fa-icon [icon]="orderedListIcon"></fa-icon>
     </button>
 </mona-button-group>
