--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -11,5 +11,6 @@
     <mona-editor-list></mona-editor-list>
     <mona-editor-indent></mona-editor-indent>
     <mona-editor-history></mona-editor-history>
+    <mona-editor-horizontal-rule></mona-editor-horizontal-rule>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
